# Datazen

./: .coverage  .gitignore  LICENSE  README.md  app.py  pyproject.toml
assets/: styles.css
data/: fusion1.csv  fusion2.csv  testcol1.csv  testcol2.csv
src/datazen/: __init__.py  callbacks.py  data_manager.py  layouts.py
test/: test_cache.py  test_corr_tab.py  test_filters_sorts.py  test_fusion.py  test_graph.py  test_import_csv.py  test_import_excel.py  test_valuebox.py
